# data_intensive_computing

./: .gitignore  README.md
exercise1/: Makefile  README.md  pyproject.toml  report.md
exercise1/figures/: jobs.drawio
exercise1/resource/: reviews_devset_first100.json
exercise1/src/: doc_cnt_cat.json  job_combined.py  job_result.txt  other.py  run.py  run.sh  test_hadoop.py
exercise1/src/exercise1/: chi_squares.py  definitions.py  job.py  poc_job.py  split_text.py  test_hadoop.py  util.py
exercise1/src/exercise1/job/: calculate_chi_squares.py  document_count_per_category.py
exercise1/src/exercise1/model/: review.py
exercise1/src/exercise1/step/: chi_square_to_top75.py  input_to_chi_square.py  input_to_document_count_per_category.py  input_to_term_freq.py  term_freq_to_chi.py  test_step.py  top75_to_merged.py
exercise1/test/exercise1/step/: test_input_to_term_freq.py  test_term_freq_to_chi.py
exercise2/: Makefile  README.md  output_ds.txt  output_rdd.txt  pyproject.toml  report.md
exercise2/src/: spark_job.ipynb  spark_job.md  test.qmd
exercise2/src/exercise2/: split_text.py  test.py
exercise2/src/exercise2/model/: category_terms_index.py
exercise2/src/exercise2/task1/: util.py
exercise3/: .gitignore  Makefile  dic.json  pyproject.toml  report.md
exercise3/src/exercise3/: client.py  darknet.py  s3_upload.py  server.py
exercise3/src/exercise3/lambda_function/: darknet.py  lambda_function.py
