[tool.poetry]
name = "exercise3"
version = "0.1.0"
description = ""
authors = ["Lukas <lukas.mah@outlook.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pytest = "^8.1.1"
ipykernel = "^6.29.4"
# pyspark = "^3.5.1"
numpy = "1.26.4"


[tool.poetry.group.dev.dependencies]
# jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
